:sparkles: fix: ajustando overflow da width e adicionando efeito de blur na navbar

--- a/style.css
+++ b/style.css
@@ -4,8 +4,9 @@
 }
 
 html {
-    width: 100vw;
+    width: 100%;
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
     * {
